--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/pino": "^7.0.5",
+    "@types/qrcode-terminal": "^0.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pino": "^8.11.0",
+    "pino-pretty": "^10.0.0",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.19.5"
   }
 }
