--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.19.5"
+    "whatsapp-web.js": "https://github.com/BielPlugner/whatszap-web.js-Fix_Button_list_SendImage"
   }
 }
