--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pino": "^8.11.0",
