--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn src/index.ts",
+    "convert": "ts-node-dev --respawn src/convert.ts",
     "build": "tsc"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/express": "^4.17.17",
+    "@types/ffmpeg": "^1.0.4",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/node": "^18.15.11",
     "@types/pino": "^7.0.5",
     "@types/qrcode-terminal": "^0.12.0",
@@ -21,9 +24,12 @@
     "axios": "^1.3.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "openai": "^3.2.1",
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "https://github.com/BielPlugner/whatszap-web.js-Fix_Button_list_SendImage"
+    "whatsapp-web.js": "latest"
   }
 }
